--- a/demos/bootstrap-ui-date-and-time/index.html
+++ b/demos/bootstrap-ui-date-and-time/index.html
@@ -3,13 +3,16 @@
 
 <head>
     <link rel="stylesheet" href="//rawgit.com/twbs/bootstrap/v3.3.0/dist/css/bootstrap.css">
-    <link rel="stylesheet" href="/style.css">
+    <link rel="stylesheet" href="../style.css">
 </head>
 
 <body ng-controller="DefaultController">
 
     <h1>AngularJS InputModified Demo</h1>
     <p class="subtitle">AngularUI Bootstrap DatePicker & TimePicker Example</p>
+
+    <p><a href="../">&leftarrow; See other demos</a></p>
+    <hr>
 
     <form name="taskForm" novalidate>
 
@@ -111,7 +114,7 @@
     <script src="//rawgit.com/angular/bower-angular/v1.3.2/angular.js"></script>
     <script src="//rawgit.com/angular-ui/bootstrap-bower/0.11.2/ui-bootstrap.js"></script>
     <script src="//rawgit.com/angular-ui/bootstrap-bower/0.11.2/ui-bootstrap-tpls.js"></script>
-    <script src="/library/angular-input-modified.js"></script>
+    <script src="../library/angular-input-modified.js"></script>
     <script src="script.js"></script>
 
 </body>
