--- a/demos/main/index.html
+++ b/demos/main/index.html
@@ -3,12 +3,15 @@
 
 <head>
     <link rel="stylesheet" href="//rawgit.com/twbs/bootstrap/v3.3.0/dist/css/bootstrap.css">
-    <link rel="stylesheet" href="/style.css">
+    <link rel="stylesheet" href="../style.css">
 </head>
 
 <body ng-controller="DefaultController">
 
     <h1>AngularJS InputModified Main Demo</h1>
+
+    <p><a href="../">&leftarrow; See other demos</a></p>
+    <hr>
 
     <form name="myForm" novalidate>
 
@@ -134,7 +137,7 @@
 
     <!-- Scripts -->
     <script src="//rawgit.com/angular/bower-angular/v1.3.2/angular.js"></script>
-    <script src="/library/angular-input-modified.js"></script>
+    <script src="../library/angular-input-modified.js"></script>
     <script src="script.js"></script>
 
 </body>
