--- a/demos/main/index.html
+++ b/demos/main/index.html
@@ -17,8 +17,6 @@
 
         <pre>
             Form modified: {{ myForm.modified ? 'Yes' : 'No' }}
-            Modified count: {{ myForm.modifiedCount }}
-            Modified models: {{ myForm.modifiedModels }}
         </pre>
 
         <!-- Full Name -->
@@ -136,8 +134,8 @@
     </form>
 
     <!-- Scripts -->
-    <script src="//rawgit.com/angular/bower-angular/v1.3.2/angular.js"></script>
-    <script src="../library/angular-input-modified.js"></script>
+    <script src="/vendor/angular/angular.js"></script>
+    <script src="/vendor/angular-input-modified/angular-input-modified.js"></script>
     <script src="script.js"></script>
 
 </body>
