- Added ng-repeat example - Fixed #5 - Fixed #8 - Released version 2.0.0

--- a/demos/index.html
+++ b/demos/index.html
@@ -19,6 +19,9 @@
         <tr>
             <td><a class="btn btn-default" href="bootstrap-ui-date-and-time/">Bootstrap UI DateTime Picker</a></td>
         </tr>
+        <tr>
+            <td><a class="btn btn-default" href="ng-repeat/">ngRepeat Example</a></td>
+        </tr>
     </table>
 
 </body>
