--- a/demos/bootstrap-ui-date-and-time/index.html
+++ b/demos/bootstrap-ui-date-and-time/index.html
@@ -110,10 +110,10 @@
 
     <!-- Scripts -->
 
-    <script src="/vendor/angular/angular.js"></script>
+    <script src="../vendor/angular/angular.js"></script>
     <script src="//rawgit.com/angular-ui/bootstrap-bower/0.11.2/ui-bootstrap.js"></script>
     <script src="//rawgit.com/angular-ui/bootstrap-bower/0.11.2/ui-bootstrap-tpls.js"></script>
-    <script src="/vendor/angular-input-modified/angular-input-modified.js"></script>
+    <script src="../vendor/angular-input-modified/angular-input-modified.js"></script>
     <script src="script.js"></script>
 
 </body>
