--- a/demos/main/index.html
+++ b/demos/main/index.html
@@ -134,8 +134,8 @@
     </form>
 
     <!-- Scripts -->
-    <script src="/vendor/angular/angular.js"></script>
-    <script src="/vendor/angular-input-modified/angular-input-modified.js"></script>
+    <script src="../vendor/angular/angular.js"></script>
+    <script src="../vendor/angular-input-modified/angular-input-modified.js"></script>
     <script src="script.js"></script>
 
 </body>
