- Addressed issue #7 - Added demo for multiple select field - Objects are now compared using angular.equals method

--- a/demos/index.html
+++ b/demos/index.html
@@ -22,6 +22,9 @@
         <tr>
             <td><a class="btn btn-default" href="ng-repeat/">ngRepeat Example</a></td>
         </tr>
+        <tr>
+            <td><a class="btn btn-default" href="select-multiple/">Multiple Select Demo</a></td>
+        </tr>
     </table>
 
 </body>
