Added form delayed initialization demo.

--- a/demos/index.html
+++ b/demos/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <link rel="stylesheet" href="//rawgit.com/twbs/bootstrap/v3.3.0/dist/css/bootstrap.css">
+    <link rel="stylesheet" href="//rawgit.com/twbs/bootstrap/v3.3.2/dist/css/bootstrap.css">
     <link rel="stylesheet" href="style.css">
 </head>
 
@@ -21,6 +21,9 @@
         </tr>
         <tr>
             <td><a class="btn btn-default" href="ng-repeat/">ngRepeat Example</a></td>
+        </tr>
+        <tr>
+            <td><a class="btn btn-default" href="delayed-init/">Delayed Initialization</a></td>
         </tr>
     </table>
 
