- Added demo for nested forms. - Updated demos and demo dependencies.

--- a/demos/bootstrap-ui-date-and-time/index.html
+++ b/demos/bootstrap-ui-date-and-time/index.html
@@ -2,13 +2,13 @@
 <html ng-app="DemoApp">
 
 <head>
-    <link rel="stylesheet" href="//rawgit.com/twbs/bootstrap/v3.3.2/dist/css/bootstrap.css">
+    <link rel="stylesheet" href="//rawgit.com/twbs/bootstrap/v3.3.4/dist/css/bootstrap.css">
     <link rel="stylesheet" href="../style.css">
 </head>
 
-<body ng-controller="DefaultController">
+<body class="fixed-width" ng-controller="DefaultController">
 
-    <h1>AngularJS InputModified Demo</h1>
+    <h1>Angular.js Input Modified Demo</h1>
     <p class="subtitle">AngularUI Bootstrap DatePicker & TimePicker Example</p>
 
     <p><a href="../">&leftarrow; See other demos</a></p>
