--- a/demos/select-multiple/index.html
+++ b/demos/select-multiple/index.html
@@ -6,9 +6,9 @@
     <link rel="stylesheet" href="../style.css">
 </head>
 
-<body ng-controller="DefaultController">
+<body class="fixed-width" ng-controller="DefaultController">
 
-    <h1>AngularJS InputModified Multiple Select Demo</h1>
+    <h1>Angular.js Input Modified Multiple Select Demo</h1>
 
     <p><a href="../">&leftarrow; See other demos</a></p>
     <hr>
