--- a/demos/index.html
+++ b/demos/index.html
@@ -2,19 +2,19 @@
 <html>
 
 <head>
-    <link rel="stylesheet" href="//rawgit.com/twbs/bootstrap/v3.3.2/dist/css/bootstrap.css">
+    <link rel="stylesheet" href="//rawgit.com/twbs/bootstrap/v3.3.4/dist/css/bootstrap.css">
     <link rel="stylesheet" href="style.css">
 </head>
 
-<body>
+<body class="fixed-width">
 
-    <h1>AngularJS InputModified Demos</h1>
+    <h1>Angular.js Input Modified Demos</h1>
 
     <p>Please choose one of the demos from the following list:</p>
 
     <table class="table table-bordered">
         <tr>
-            <td><a class="btn btn-primary" href="main/">Main Demo</a></td>
+            <td><a class="btn btn-primary" href="main/">Main</a></td>
         </tr>
         <tr>
             <td><a class="btn btn-default" href="bootstrap-ui-date-and-time/">Bootstrap UI DateTime Picker</a></td>
@@ -26,7 +26,10 @@
             <td><a class="btn btn-default" href="delayed-init/">Delayed Initialization</a></td>
         </tr>
         <tr>
-            <td><a class="btn btn-default" href="select-multiple/">Multiple Select Demo</a></td>
+            <td><a class="btn btn-default" href="select-multiple/">Multiple Select</a></td>
+        </tr>
+        <tr>
+            <td><a class="btn btn-default" href="nested-forms/">Nested Forms</a></td>
         </tr>
     </table>
 
