--- a/demos/delayed-init/index.html
+++ b/demos/delayed-init/index.html
@@ -40,6 +40,22 @@
             <p class="modified">Modified: {{ myForm.fullName.modified ? 'Yes' : 'No' }}</p>
         </div>
 
+        <div class="form-group">
+            <label for="email" class="control-label">E-Mail:</label>
+            <div class="control">
+                <input
+                    id="email"
+                    name="email"
+                    class="form-control"
+                    type="email"
+                    ng-model="user.email"
+                    required
+                >
+            </div>
+            <p class="master">Master: "{{ myForm.email.masterValue }}"</p>
+            <p class="modified">Modified: {{ myForm.email.modified ? 'Yes' : 'No' }}</p>
+        </div>
+
         <!-- Buttons -->
         <div class="form-group footer">
 
