--- a/demos/nested-forms/index.html
+++ b/demos/nested-forms/index.html
@@ -216,7 +216,7 @@
 
     <!-- Scripts -->
     <script src="../vendor/angular/angular.js"></script>
-    <script src="../vendor/angular-input-modified/angular-input-modified.js"></script>
+    <script src="../vendor/angular-input-modified/angular-input-modified.min.js"></script>
     <script src="script.js"></script>
 
 </body>
