Addition of the modifiable behavior now can be fully controlled via `bsModifiable` directive.

--- a/demos/index.html
+++ b/demos/index.html
@@ -31,6 +31,9 @@
         <tr>
             <td><a class="btn btn-default" href="nested-forms/">Nested Forms</a></td>
         </tr>
+        <tr>
+            <td><a class="btn btn-default" href="excluded-elements/">Excluded Elements</a></td>
+        </tr>
     </table>
 
 </body>
