--- a/demos/index.html
+++ b/demos/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <link rel="stylesheet" href="//rawgit.com/twbs/bootstrap/v3.3.4/dist/css/bootstrap.css">
+    <link rel="stylesheet" href="//rawgit.com/twbs/bootstrap/v3.3.5/dist/css/bootstrap.css">
     <link rel="stylesheet" href="style.css">
 </head>
 
@@ -33,6 +33,9 @@
         </tr>
         <tr>
             <td><a class="btn btn-default" href="excluded-elements/">Excluded Elements</a></td>
+        </tr>
+        <tr>
+            <td><a class="btn btn-default" href="angular-ui-tinymce/">Angular UI TinyMCE</a></td>
         </tr>
     </table>
 
