--- a/demos/angular-ui-tinymce/index.html
+++ b/demos/angular-ui-tinymce/index.html
@@ -41,7 +41,10 @@
             <p class="modified">Modified: {{ myForm.content.modified ? 'Yes' : 'No' }}</p>
 
             <h2>Master value:</h2>
-            <pre>{{ myForm.content.masterValue }}</pre>
+            <pre style="white-space: normal;">{{ myForm.content.masterValue }}</pre>
+
+            <h2>Value:</h2>
+            <pre style="white-space: normal;">{{ myForm.content.$modelValue }}</pre>
 
         </div>
 
