--- a/demos/index.html
+++ b/demos/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <link rel="stylesheet" href="//rawgit.com/twbs/bootstrap/v3.3.6/dist/css/bootstrap.css">
+    <link rel="stylesheet" href="../vendor/bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="style.css">
 </head>
 
