--- a/demos/excluded-elements/index.html
+++ b/demos/excluded-elements/index.html
@@ -42,7 +42,7 @@
 
         <!-- About -->
         <div class="form-group" bs-modifiable="false">
-            <label for="about" class="control-label">About:</label>
+            <label for="about" class="control-label">About (Not Modifiable):</label>
             <div class="control">
                 <input id="about" name="about" class="form-control" type="text" ng-model="user.about" />
             </div>
